@@ -7,6 +7,11 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2024 MAY 24a
+  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
+    - added find_bdry_node_surface() and _heat_to_surface()
+    
+
 2024 MAY 23a
   * in model/fluid/_Favre-Reynolds/fluid_bdry.c
     - made further improvements to update_bdry_wall_ablation()
